--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: Sky Music
+description: Visual music sheets for the game Sky Children of the Light
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
