--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,9 @@ google_analytics:
 theme: jekyll-theme-architect
 plugins:
   - jekyll-seo-tag
+
+markdown: kramdown
+kramdown:
+  syntax_highlighter_opts:
+    disable : true
+
