--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,7 @@ markdown: kramdown
 kramdown:
   syntax_highlighter_opts:
     disable: true
-
+collections_dir: songs
+collections:
+  - classical
+  - traditional
