--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,6 @@ collections:
   - classical
   - movies
   - popular
-  - original_player_song
+  - original_players_songs
   - traditional
   - videogames
